Fixed gap for mobile nav

--- a/_app/css/modules/header.css
+++ b/_app/css/modules/header.css
@@ -69,9 +69,9 @@
 
 @media (max-width: 768px) {
 	.header {
+		height: 5rem;
 		display: flex;
 		justify-content: space-between;
-		height: 3rem;
 		background-color: var(--color-foreground);
 		margin-bottom: var(--gap-section);
 		position: sticky;
@@ -82,7 +82,7 @@
 		display: none;
 	}
 	.header__navigation {
-		gap: 3rem;
+		gap: 1.2rem;
 		padding-right: 3rem;
 	}
 	.header__navigation a {
